[package]
name = "gws-cache"
version = "0.1.0"
authors = ["Albert Gomà i León"]
description = "Asynchronous cache for gws using Rust's port of SwissTable hash map."
license = "GPL-2.0"
repository = "https://github.com/AlbertGoma/gws-cache"
readme = "README.md"
edition = "2018"


[dependencies]
hashbrown = { version = "0.7.1", features = ["raw", "rustc-internal-api"] }
ahash = "0.3.2"
tokio = { version = "0.2.13", features = ["io-util", "parking_lot"] }

[dev-dependencies]
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["rt-threaded", "macros", "test-util"] }
